# customer-onboarding

v1-onboarding/: README.md  docker-config.json  requirements.txt
v1-onboarding/core/: plot.py
v1-onboarding/orchestration/: container_images.py
v1-onboarding/tasks/: load.py
v1-onboarding/workflows/: simple_hpo.py
v1-v2-download-speed/: config.yaml  download_v1.py  download_v2.py  generate_data.py
v2-baseline/: .env.example  .gitignore  00-setup-and-verify.ipynb  01-authoring-fundamentals.ipynb  02-data-flow.ipynb  03-processing-at-scale.ipynb  04-caching-and-reproducibility.ipynb  05-reusable-containers.ipynb  06-training-at-scale.ipynb  07-serving.ipynb  08-agents-and-sandboxing.ipynb  09-migration-v1-to-v2.ipynb  README.md  pyproject.toml  workshop_config.py
v2-baseline/appendix/: A-deployment-adaptation.md  B-observability-and-debugging.md
v2-baseline/config-templates/: config.yaml.example
v2-baseline/scripts/: remote_task_deploy.py  triggers_deploy.py
v2-baseline/scripts/apps/: fastapi_app.py  streamlit_app.py  vllm_app.py
v2-baseline/scripts/migration/: v2_pipeline.py
v2-baseline/self-managed-setup/: values.gcp.yaml
v2-onboarding/: .env.example  .gitignore  00-setup-and-verify.ipynb  01-authoring-fundamentals.ipynb  02-parallelism-and-resilience.ipynb  03-caching-performance-reproducibility.ipynb  04-reusable-containers.ipynb  05-gcp-data-and-integrations.ipynb  06-ray-on-union.ipynb  07-apps-and-inference.ipynb  08-v1-to-v2-migration.ipynb  09-agents-and-sandboxing.ipynb  README.md  requirements.txt  workshop_config.py
(+8 files in other folders)
